<resources>
    <string name="app_name">Well Predict</string>
    <string name="title_activity_main">Well Predict</string>
    <string name="title_home">Home</string>
    <string name="title_diagnose">Diagnose</string>
    <string name="title_profile">Profile</string>
    <string name="news_title">The Washington Post</string>
    <string name="news_description">Injecting fentanyl is dangerous. Should users be encouraged to smoke it?</string>
    <string name="news_background">News Background</string>
    <string name="news_section_title">News</string>
    <string name="diagnose_description">Identify potential causes of your health symptoms based on what you’re experiencing</string>
    <string name="diagnose_title">Diagnose your symptoms</string>
    <string name="check_now_button">Check Now</string>
    <string name="greetings_description">Hope you’re doing good!</string>
    <string name="greetings_title">Hey,</string>
    <string name="header_background">Header Background</string>
    <string name="logo_image">Logo Image</string>
    <string name="see_all">See All</string>
    <string name="time_icon">Time Icon</string>
    <string name="news_time">10h ago</string>
    <string name="diagnose_history_title">Gastroenteritis</string>
    <string name="diagnose_history_date">1 June 2024, 5.40AM</string>
    <string name="diagnose_history_section_title">Diagnose History</string>
    <string name="icon_back">Icon Back</string>
    <string name="search">Search</string>
    <string name="day_date">13</string>
    <string name="month_year_date">May 2024</string>
    <string name="add_symptomps_title">Add your symptomps</string>
    <string name="diagnose_button_title">Diagnose Your Symptomps</string>
    <string name="add_symptoms">Add symptoms</string>
    <string name="logout">Log-out</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_symptom">Click to add symptom</string>
    <string name="diagnose">Diagnose</string>
    <string name="symptom_title">Symptom Title</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="full_name">Full Name</string>
    <string name="please_enter_your_information">Please enter your information</string>
    <string name="please_enter_your_account">Please enter your account</string>
    <string name="profile">Profile</string>
    <string name="setting_button">setting_button</string>
    <string name="register_here">Register here!</string>
    <string name="didn_t_have_an_account_yet">Didn’t have an account yet?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="failed_fetching">Failed to Fetching Data From Server</string>
    <string name="failed_communicate">Failed to communicate with server</string>
    <string name="see_details">See Details</string>
    <string name="diagnose_result_greetings">This is a diagnosis of some of the symptoms you give.</string>
    <string name="user_greetings">Hi, Rifqi Aditya</string>
    <string name="causes_title">Causes</string>
    <string name="causes_description">Viruses (e.g., norovirus), bacteria (e.g., E. coli), parasites, and contaminated food or water.</string>
    <string name="treatment_title">Treatment</string>
    <string name="treatment_description">Hydration, rest, and, in some cases, antibiotics or antiviral medications.</string>
    <string name="disease_description">Weakness in the legs can be caused by many different conditions, including amyotrophic lateral sclerosis (ALS or called Lou Gehrig’s disease), bulging/herniated (slipped) disc, Cauda equina syndrome, Guillain-Barré syndrome, autoimmune diseases, multiple sclerosis, Parkinson’s disease, peripheral neuropathy, pinched nerve, stroke, and others.</string>
    <string name="disease_title">Weakness in limbs</string>
    <string name="diagnose_results">Diagnose Results</string>
    <string name="diagnose_history_detail">Diagnose History Detail</string>
    <string name="user_age">22 years old</string>
    <string name="user_email">username@mail.com</string>
    <string name="user_location">Jakarta, Indonesia</string>
    <string name="log_out">Log out</string>
    <string name="date">1 June 2024, 5.40AM</string>
    <string name="date_title">Date</string>
    <string name="symptoms_list">acute liver failure, brittle nails, abnormal menstruation</string>
    <string name="search_symptoms">Search Symptoms</string>
    <string name="hidden_password">***********</string>

</resources>