<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:paddingHorizontal="25dp"
    tools:context=".ui.history.HistoryDetailActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_icon_border"
        android:contentDescription="@string/icon_back"
        android:onClick="onBackButtonClick"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextContent.ActivityTitle"
        android:text="@string/diagnose_history_detail"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <LinearLayout
        android:id="@+id/date_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            style="@style/TextContent.SubHeading"
            android:text="@string/date_title"
            android:textSize="14sp" />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            style="@style/TextContent.SubHeading"
            android:textSize="14sp"
            android:text="@string/date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/symtomps_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_section">

        <TextView
            style="@style/TextContent.Medium"
            android:textSize="14sp"
            android:text="@string/diagnose_result_greetings" />

        <TextView
            style="@style/TextContent.Medium"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/teal"
            android:text="@string/symptoms_list"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/disease_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_rectangle_teal"
        android:backgroundTint="@color/teal"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintTop_toBottomOf="@+id/symtomps_section"
        tools:layout_editor_absoluteX="25dp">

        <TextView
            android:id="@+id/tv_disease_name"
            style="@style/TextContent.Bold.Caption"
            android:text="@string/disease_title"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_disease_description"
            style="@style/TextContent.Regular.Small"
            android:layout_marginTop="10dp"
            android:text="@string/disease_description"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/causes_treatment_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintTop_toBottomOf="@+id/disease_section"
        tools:layout_editor_absoluteX="25dp">

        <TextView
            style="@style/TextContent.Bold.Caption"
            android:text="@string/causes_title"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_causes_description"
            style="@style/TextContent.Regular.Small"
            android:text="@string/causes_description"
            android:textColor="@color/argent" />

        <TextView
            style="@style/TextContent.Bold.Caption"
            android:layout_marginTop="20dp"
            android:text="@string/treatment_title"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_treatment_description"
            style="@style/TextContent.Regular.Small"
            android:text="@string/treatment_description"
            android:textColor="@color/argent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>