<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.HomeFragment">

            <ImageView
                android:id="@+id/iv_logo_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/ic_logo_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/greetings_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="@+id/iv_logo_image"
                app:layout_constraintStart_toStartOf="@+id/iv_logo_image"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo_image">

                <TextView
                    style="@style/TextContent.Bold.Heading"
                    android:text="@string/greetings_title" />

                <TextView
                    style="@style/TextContent.Bold.Heading"
                    android:paddingHorizontal="6dp"
                    android:text="@string/username"
                    android:textColor="@color/teal" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_greetings_description"
                style="@style/TextContent.Regular.Large"
                android:text="@string/greetings_description"
                app:layout_constraintEnd_toEndOf="@+id/greetings_section"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/greetings_section"
                app:layout_constraintTop_toBottomOf="@+id/greetings_section" />

            <View
                android:id="@+id/divider_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_marginTop="25dp"
                android:background="@color/lightGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_greetings_description" />

            <LinearLayout
                android:id="@+id/diagnose_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_line">

                <TextView
                    style="@style/TextContent.Bold.SubHeading"
                    android:text="@string/diagnose_title" />

                <TextView
                    style="@style/TextContent.Regular.Medium"
                    android:text="@string/diagnose_description" />

                <com.google.android.material.button.MaterialButton
                    style="@style/TextContent.Medium.White"
                    android:layout_width="140dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/teal"
                    android:text="@string/check_now_button"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:cornerRadius="6dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="25dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/diagnose_banner">

                <TextView
                    style="@style/TextContent.Bold.SubHeading"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/news_section_title" />

                <TextView
                    android:id="@+id/tv_news_see_all"
                    style="@style/TextContent.BodyText"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="end"
                    android:text="@string/see_all" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/newsCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/news_section">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_news_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/news_background"
                        android:scaleType="centerCrop"
                        android:src="@drawable/news_image_placeholder"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.65" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="20dp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_news_image"
                        app:layout_constraintEnd_toStartOf="@id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/iv_news_image">

                        <TextView
                            android:id="@+id/tv_news_author"
                            style="@style/TextContent.BodyText"
                            android:text="@string/news_title" />

                        <TextView
                            android:id="@+id/tv_news_title"
                            style="@style/TextContent.Bold"
                            android:layout_width="match_parent"
                            android:text="@string/news_description"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_news_upload_time"
                            style="@style/TextContent.BodyText"
                            android:textColor="@color/argent"
                            android:drawablePadding="4dp"
                            android:gravity="center_vertical"
                            android:text="@string/news_time"
                            android:textSize="11sp"
                            app:drawableStartCompat="@drawable/ic_access_time_24"/>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/cardViewShimmer"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/bg_shimmer_effect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/news_section"/>

            <LinearLayout
                android:id="@+id/diagnose_history_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/newsCardView">

                <TextView
                    style="@style/TextContent.Bold.SubHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/diagnose_history_section_title" />

                <TextView
                    android:id="@+id/tv_diagnose_history_see_all"
                    style="@style/TextContent.BodyText"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="end"
                    android:text="@string/see_all" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/diagnose_history_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintTop_toBottomOf="@+id/diagnose_history_section"
                app:strokeColor="@color/nightRider">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/TextContent.Bold"
                            android:text="@string/diagnose_history_title"
                            android:textSize="14sp" />

                        <TextView
                            style="@style/TextContent.Medium"
                            android:drawablePadding="4dp"
                            android:text="@string/diagnose_history_date"
                            android:textColor="@color/argent"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        style="@style/TextContent.Medium"
                        android:textSize="12sp"
                        android:text="@string/see_details"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/diagnose_history_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </TableLayout>

</ScrollView>