<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.auth.LoginActivity"
            tools:layout_editor_absoluteX="25dp">

            <ImageView
                android:id="@+id/iv_logo_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/ic_logo_day" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextContent.Light.Heading"
                android:layout_marginTop="90dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextContent.Regular.Medium"
                android:paddingTop="8dp"
                android:text="@string/please_enter_your_account" />

            <TextView
                android:id="@+id/tv_email_input_title"
                style="@style/TextContent.BodyText"
                android:paddingTop="20dp"
                android:text="@string/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/argent"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_underline_text_input"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/argent"
                    app:validateEmail="@{true}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_password_input_title"
                style="@style/TextContent.BodyText"
                android:paddingTop="20dp"
                android:text="@string/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/argent"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_underline_text_input"
                    android:inputType="textPassword"
                    android:textColor="@color/argent"
                    app:validatePassword="@{true}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/TextContent.SubHeading"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/teal"
                android:text="@string/login"
                android:textColor="@color/white"
                app:cornerRadius="6dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main">

            <TextView
                style="@style/TextContent.Regular.Medium"
                android:text="@string/didn_t_have_an_account_yet" />

            <TextView
                android:id="@+id/tv_register"
                style="@style/TextContent.Regular.Medium"
                android:textColor="@color/blue"
                android:text="@string/register_here" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
