<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/diagnose_history_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    app:cardCornerRadius="6dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/diagnose_history_section">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_diagnose_history_title"
                style="@style/TextContent.Bold"
                android:text="@string/diagnose_history_title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_diagnose_history_date"
                style="@style/TextContent.Medium"
                android:drawablePadding="4dp"
                android:text="@string/diagnose_history_date"
                android:textColor="@color/argent"
                android:textSize="12sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView4"
            style="@style/TextContent.Medium"
            android:textSize="12sp"
            android:text="@string/see_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>